Fix bottom outermost white space
This white space should be synced with top outermost one.

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -15,7 +15,7 @@ body {
 	background-color: inherit;
 	margin: 1.5rem auto;
 	margin-block-end: max(
-		var(--space-default),
+		var(--space-small),
 		(var(--space-left-body) + var(--space-small)) / var(--ratio-2)
 	);
 	margin-block-start: max(
